--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header>
-            <h2 data-text="꧁༒☬Oyw☬༒">꧁༒☬Oyw☬༒</h2>
+            <h2 data-text="꧁༒☬Oyw☬༒">꧁༒☬AbhiRj34☬༒</h2>
             <nav>
                 <ul id="menuList">
                     <li><a href="#" id="home">home</a></li>
@@ -115,7 +115,7 @@
             <li><a href="contect.html">contect us</a></li>
         </ul>
     </div>
-    <p>copyright (c) ꧁༒☬ABHISHEK☬༒꧂ chauhan official website.</p>
+    <p>copyright (c) ꧁༒☬AbhiRj34☬༒꧂ chauhan official website.</p>
 </div>
     <script>                                                                                                                                                 
          var menuList =document.getElementById("menuList");
